# BrightTonePitch

./: README.md  brighttonepitch_text_generation.ipynb  finance.ipynb  pyproject.toml
mgduck_part/: Color working.ipynb  Gradient_Background.ipynb
